Development Portal (2025-03-06 shi)
==============================
Update d-preview link


Development Portal (2025-02-24 shi)
==============================
Update related_dupe stream css


Development Portal (2025-02-22 shi)
==============================
Update stream css


Development Portal (2025-02-18 shi)
==============================
Update stream css


Development Portal (2025-02-18 shi)
==============================
Update new stats table css
Update publisher stream css


Development Portal (2025-02-16 shi)
==============================
Add stream numbers


Development Portal (2025-02-14 shi)
==============================
Stream styles


Development Portal (2025-01-16 shi)
==============================
Update new stats for current theme
Update translations
Update print-friendly
Update value column width for org file total budget


Development Portal (2025-01-15 shi)
==============================
Display new stats with tables for white version


Development Portal (2025-01-09 shi)
==============================
Add social icons to footer
Update main_head for original and white versions
Update light grey background
Update status section
Add theme dropdown


Development Portal (2025-01-08 shi)
==============================
Update money table css
Update SAVi new theme
Add new footer


Development Portal (2025-01-07 shi)
==============================
Add new theme
Update crumb seperator
Update data quality page

Development Portal (2024-09-04 shi)
==============================
Remove CRS from sectors table
Remove data descriptions for CRS


Development Portal (2024-09-03 shi)
==============================
Add activity status codes
Update translation text


Development Portal (2024-07-17 shi)
==============================
Add SDG svg icons to SAVi css
Minor css fixes


Development Portal (2024-07-12 shi)
==============================
Update text for SDG filters


Development Portal (2024-07-11 shi)
==============================