@@ -92,21 +92,21 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 #view_tail_white
 		</div>
 	</div>
-	<div class="footer_wrap">
+	<div class="footer_wrap footer_white">
 		<div class="footer">
-			<div class="footer_link footer_white">
+			<div class="footer_link footer_block">
 				{large_footer_links}
 			</div>
 		</div>
 		<div class="footer_line"></div>
 		<div class="footer">
-			<div class="footer_link footer_white">
+			<div class="footer_link footer_block">
 				{large_footer_info}
 			</div>
 		</div>
 		<div class="footer_line"></div>
 		<div class="footer">
-			<div class="footer_link footer_white footer_copy">
+			<div class="footer_link footer_block footer_copy">
 				<a href="https://iatistandard.org/en/privacy-policy/">{footer27_text}</a>
 				<div>{footer28_text}</div>
 				<a onclick="$('html,body').animate({ scrollTop:0},'slow');return false;">{footer_top_text}</a>
