@@ -1,3 +1,8 @@
+Development Portal (2025-06-25 shi)
+==============================
+Update header and footer for new view 
+
+
 Development Portal (2025-03-06 shi)
 ==============================
 Update d-preview link
